tests/baselines/reference/reassignStaticProp.errors.txt
tests/cases/compiler/reassignStaticProp.ts(5,12): error TS2300: Duplicate identifier 'bar'.
tests/cases/compiler/reassignStaticProp.ts(5,12): error TS2717: Subsequent property declarations must have the same type.  Property 'bar' must be of type 'number', but here has type 'string'.


==== tests/cases/compiler/reassignStaticProp.ts (2 errors) ====
    class foo {
     
        static bar = 1;
     
        static bar:string; // errror - duplicate id
               ~~~
!!! error TS2300: Duplicate identifier 'bar'.
               ~~~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'bar' must be of type 'number', but here has type 'string'.
!!! related TS6203 tests/cases/compiler/reassignStaticProp.ts:3:12: 'bar' was also declared here.
     
    }
     
     
    
    